added link to portfolio item

--- a/index.html
+++ b/index.html
@@ -102,52 +102,52 @@
     <p class="section__subtitle--work">A selection of my range of work</p>
     <div class="portfolio">
       <!-- Portfolio Item 01 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 02 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 03 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 04 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 05 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 06 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 07 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-07.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 08 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-08.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 09 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-09.jpg" alt="" class="portfolio__img">
       </a>
 
       <!-- Portfolio Item 00 -->
-      <a href="#" class="portfolio__item">
+      <a href="portfolio-item.html" class="portfolio__item">
         <img src="img/portfolio-10.jpg" alt="" class="portfolio__img">
       </a>
     </div>
